<resources>
    <string name="app_name">Movie Insight</string>
    <string name="home_title">Home</string>
    <string name="bookmark_title">Bookmark</string>
    <string name="profile_title">Profile</string>
    <string name="movies_tab">Movies</string>
    <string name="tv_series_tab">Tv Series</string>
    <string name="failed_to_retrieve_data">Failed to retrieve data</string>
    <string name="keyword_movies_not_found">Keyword movies not found</string>
    <string name="keyword_tv_series_not_found">Keyword tv series not found</string>
    <string name="number_of_seasons">%1$d season</string>
    <string name="number_of_episodes">%1$d episode</string>
    <string name="popularity">%1$d vote</string>
    <string name="your_bookmark_is_still_empty">Your bookmark is still empty</string>
    <string name="successfully_save_to_bookmark">Successfully save to bookmark</string>
    <string name="successfully_remove_from_bookmark">Successfully remove from bookmark</string>
    <string name="details">Details</string>
    <string name="genres">Genres:</string>
    <string name="production">Production:</string>
    <string name="production_countries">Production Countries:</string>
    <string name="status">Status:</string>
    <string name="released_date">Released date:</string>
    <string name="number_of_seasons_text">Number of seasons:</string>
    <string name="number_of_episodes_text">Number of episodes:</string>
    <string name="popularity_text">Popularity:</string>
    <string name="overview">Overview:</string>
    <string name="back_button">Back button</string>
    <string name="bookmark_button">Bookmark button</string>
    <string name="poster_image_background">Poster image background</string>
    <string name="poster_image">Poster image</string>
    <string name="my_bookmark">My Bookmark</string>
    <string name="search_title">Search title</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="on_the_air">On the Air</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_image">User profile image</string>
    <string name="github">Github</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">LinkedIn</string>
    <string name="name">Adrian Septiyadi</string>
    <string name="email">adrianseptiyadi@gmail.com</string>
    <string name="connect_with_me">Connect with me:</string>
</resources>