<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color">

    <TextView
        android:id="@+id/tv_bookmark_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/my_profile"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_user_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp"
        android:background="@drawable/box_border"
        app:layout_constraintTop_toBottomOf="@id/iv_user_photo">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/tv_name"/>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_tools" />

        <TextView
            android:id="@+id/tv_connect_with_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/connect_with_me"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/view_line"/>

        <ImageView
            android:id="@+id/iv_github"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="64dp"
            android:src="@drawable/github"
            android:contentDescription="@string/github"
            app:layout_constraintTop_toBottomOf="@id/tv_connect_with_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_linkedin"/>

        <ImageView
            android:id="@+id/iv_linkedin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/linkedin"
            android:contentDescription="@string/linkedin"
            app:layout_constraintTop_toBottomOf="@id/tv_connect_with_me"
            app:layout_constraintStart_toEndOf="@id/iv_github"
            app:layout_constraintEnd_toStartOf="@id/iv_instagram"/>

        <ImageView
            android:id="@+id/iv_instagram"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:src="@drawable/instagram"
            android:contentDescription="@string/instagram"
            app:layout_constraintTop_toBottomOf="@id/tv_connect_with_me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_linkedin"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>