<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color">

    <TextView
        android:id="@+id/tv_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_border_checked"
        android:fontFamily="@font/inter_semibold"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/now_playing"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_border_unchecked"
        android:fontFamily="@font/inter_semibold"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/popular"
        android:textColor="@color/secondary_color"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/tv_now_playing"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_top_rated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_border_unchecked"
        android:fontFamily="@font/inter_semibold"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/top_rated"
        android:textColor="@color/secondary_color"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/tv_popular"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_now_playing" />

    <TextView
        android:id="@+id/tv_failed_to_retrieve_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/failed_to_retrieve_data"
        android:textColor="@color/secondary_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:indeterminateTint="@color/secondary_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>